--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   <option value="https://casinoganador.vercel.app/admin.html">Casino Ganador</option>
                   <option value="https://casinoganamos.vercel.app/admin.html">Casino Ganamos</option>
                   <option value="https://casinomillonario.vercel.app/admin.html">Casino Millonario</option>
-                  <option value="https://ficha-24hs.vercel.app/admin.html">Fichas 24/7</option>
+                  <option value="https://casino-olimpo.vercel.app/admin.html">Casino Olimpo</option>
                   <option value="https://gana24hs.vercel.app/admin.html">Gana 24/7</option>
                   <option value="https://ganamos24hsactivos.vercel.app/admin.html">Ganamos 24hs Activos</option>
                   <option value="https://gold-party.vercel.app/admin.html">Gold Party</option>
