--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://ficha-24hs.vercel.app/admin.html" target="_blank" rel="noopener noreferrer">
-                    <span class="link-name">Fichas 24/7</span>
-                    <span class="link-url">ficha-24hs.vercel.app</span>
+                  <a href="https://casino-olimpo.vercel.app/admin.html" target="_blank" rel="noopener noreferrer">
+                    <span class="link-name">Casino Olimpo</span>
+                    <span class="link-url">casino-olimpo.vercel.app</span>
                   </a>
                 </li>
                 <li>
