--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                   <option value="https://juga-con-ganemos.vercel.app/admin.html">Juga Con Ganemos</option>
                   <option value="https://juga-y-gana.vercel.app/admin.html">Juga y Gana</option>
                   <option value="https://joker-crazy.vercel.app/admin.html">Joker Crazy</option>
+                  <option value="http://lion-ganador.vercel.app/admin.html">Lion Ganador</option>
                   <option value="https://rhino-megaways.vercel.app/admin.html">Rhino Megaways</option>
-                  <option value="http://tridenteganador.vercel.app/admin.html">Tridente Ganador</option>
                 </select>
               </div>
               <button class="btn" id="goBtn" type="button">Ir al panel</button>
@@ -304,15 +304,15 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://rhino-megaways.vercel.app/admin.html" target="_blank" rel="noopener noreferrer">
-                    <span class="link-name">Rhino Megaways</span>
-                    <span class="link-url">rhino-megaways.vercel.app</span>
+                  <a href="http://lion-ganador.vercel.app/admin.html" target="_blank" rel="noopener noreferrer">
+                    <span class="link-name">Lion Ganador</span>
+                    <span class="link-url">lion-ganador.vercel.app</span>
                   </a>
                 </li>
                 <li>
-                  <a href="http://tridenteganador.vercel.app/admin.html" target="_blank" rel="noopener noreferrer">
-                    <span class="link-name">Tridente Ganador</span>
-                    <span class="link-url">tridenteganador.vercel.app</span>
+                  <a href="https://rhino-megaways.vercel.app/admin.html" target="_blank" rel="noopener noreferrer">
+                    <span class="link-name">Rhino Megaways</span>
+                    <span class="link-url">rhino-megaways.vercel.app</span>
                   </a>
                 </li>
               </ul>
